# mercury

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.hsm  README.md  docker-entrypoint.sh  iclient.sh  launch-server.sh  rust-toolchain  rust-toolchain.toml  statechains.md  test.sh
client/: .gitignore  Cargo.toml  README.md  Settings.toml  cli.yml  run_wallet_daemon.rs  run_wallet_process.rs
client/data_bitcoin_regtest/bitcoin/regtest/: onion_v3_private_key
client/data_bitcoin_regtest/bitcoin/regtest/blocks/index/: 000005.ldb  000008.ldb  MANIFEST-000007
client/data_bitcoin_regtest/bitcoin/regtest/chainstate/: 000005.ldb  000008.ldb  MANIFEST-000007
client/data_bitcoin_regtest/electrs_bitcoin_db/regtest/regtest/newindex/cache/: IDENTITY  LOG  OPTIONS-000007
client/data_bitcoin_regtest/electrs_bitcoin_db/regtest/regtest/newindex/history/: 000009.sst  000013.sst  IDENTITY  LOG  MANIFEST-000004  OPTIONS-000007  OPTIONS-000011
client/data_bitcoin_regtest/electrs_bitcoin_db/regtest/regtest/newindex/txstore/: 000009.sst  000013.sst  IDENTITY  LOG  MANIFEST-000004  OPTIONS-000007  OPTIONS-000011
client/data_bitcoin_regtest/logs/electrs/: current
client/data_bitcoin_regtest/logs/nodedaemon/: current
client/data_bitcoin_regtest/logs/prerenderer/: current
client/data_bitcoin_regtest/logs/tor/: current
client/data_bitcoin_regtest/logs/websocket/: current
client/src/: daemon.rs  error.rs  lib.rs  main.rs  tests.rs
client/src/ecdsa/: keygen.rs  mod.rs  recover.rs  rotate.rs  sign.rs  types.rs
client/src/mocks/: mock_electrum.rs
client/src/schnorr/: mod.rs
client/src/state_entity/: api.rs  conductor.rs  confirm_proofs.rs  deposit.rs  mod.rs  transfer.rs  util.rs  withdraw.rs
client/src/state_entity/blinded_conductor/: mod.rs  phase0.rs  phase1.rs  phase2.rs  phase4.rs  swap_init.rs
client/src/utilities/: encoding.rs  mod.rs  requests.rs  validation.rs
client/src/wallet/: key_paths.rs  mod.rs  shared_key.rs  shared_wallet.rs  wallet.rs  wallet_std.rs
client/test-assets/: wallet.data
client/wallet/: test-wallet.data
doc/: Swapping.md  blind_2p_ecdsa.md  blind_musig2.md  dlcs.md  fee_on_deposit.md  merc_blind  merc_blind.md  pod.md  statechains.md  swaps.md  tutorial.md
integration-tests/: .gitignore  Cargo.toml  README.md
integration-tests/db-smt-testing/: 000004.sst  IDENTITY  LOG  LOG.old.1599587189151791  LOG.old.1599587198921493  MANIFEST-000008  OPTIONS-000011
integration-tests/src/: batch_transfer.rs  batch_transfer_test.rs  lib.rs  simulation.rs  test.rs
layer/: README.md  merc_layer.md  openapi.json  protocol.md  wasm_api.md
s3/: Cargo.toml
s3/src/: main.rs
server/: .gitignore  Cargo.toml  README.md  Rocket.toml  Settings.toml
server/db-smt/: 000016.sst  000025.sst  IDENTITY  LOG  LOG.old.1595520378446112  LOG.old.1595520432330516  LOG.old.1595520580144858  LOG.old.1595520601580999  LOG.old.1595520602007666  LOG.old.1595520602249573  LOG.old.1595520655533287  LOG.old.1595520708847646  MANIFEST-000026  OPTIONS-000026
server/src/: config.rs  error.rs  lib.rs  main.rs  rpc_client.rs  server.rs  state_chain.rs  state_chain_entity.rs  tests.rs  util.rs  watch.rs  watch_btc.rs  watcher.rs
server/src/auth/: cognito.rs  jwt.rs
server/src/protocol/: conductor.rs  deposit.rs  ecdsa.rs  mod.rs  pay_on_demand.rs  pay_on_deposit.rs  ping.rs  pod.rs  requests.rs  transfer.rs  transfer_batch.rs  util.rs  withdraw.rs
server/src/routes/: deposit.rs  ecdsa.rs  mod.rs  schnorr.rs  state_entity.rs  transfer.rs  util.rs  watch.rs  withdraw.rs
server/src/rpc/: bitcoin_client_factory.rs  lightning_client_factory.rs  mod.rs
server/src/storage/: db.rs  db_postgres.rs  description.md  mock.rs  mod.rs  monotree.rs  se_mock.rs  storage.rs
server/src/storage/aws/: dynamodb.rs
server/tests/: deposit_tests.rs  utilities_tests.rs
server/tests/tools/: mod.rs
shared/: .gitignore  Cargo.toml  README.md
shared/db-test/: 000004.sst  000010.sst  IDENTITY  LOG  LOG.old.1595521388907702  LOG.old.1595521388913545  LOG.old.1595521388918574  MANIFEST-000011  OPTIONS-000011
shared/src/: blinded_token.rs  commitment.rs  ecies.rs  error.rs  lib.rs  mainstay.rs  state_chain.rs  structs.rs  swap_data.rs  util.rs
shared/src/mocks/: mock_client.rs  mock_electrum.rs  mock_ln_rpc_client.rs  mock_rpc_client.rs  mod.rs
src/: config.rs  error.rs  lib.rs  state_entity.rs  transactions.rs
src/interfaces/: crypto.rs  mod.rs  protocols.rs  storage.rs
src/interfaces/mocks/: mod.rs  owner.rs  storage.rs
tor/: Cargo.toml
tor/src/: main.rs
utilities/server/: buildspec.yml
utilities/server/cognito/: package-lock.json  package.json
utilities/server/docker-build-img/: Dockerfile
