[workspace]
members = ["client", "server", "shared", "integration-tests"]

[patch.'https://github.com/KZen-networks/multi-party-ecdsa']
multi-party-ecdsa = { git = "https://github.com/commerceblock/multi-party-ecdsa", tag="v0.2.6" }

[patch.'https://github.com/KZen-networks/kms-secp256k1']
kms = { git = "https://github.com/commerceblock/kms-secp256k1", tag="v0.1.0" }

[patch.crates-io]
rust-gmp = { version = "0.5.0", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[patch.'https://github.com/KZen-networks/curv']
secp256k1 = "0.19.0"

[patch.'https://github.com/KZen-networks/centipede']
secp256k1 = "0.19.0"