 [package]
name = "client"
version = "0.1.0"

[lib]
name = "client_lib"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "run_wallet_daemon"
path = "run_wallet_daemon.rs"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
clap = { version = "2.33.3", features = ["yaml"] }
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
failure = "0.1.8"
uuid = { version = "0.5", features = ["v4", "serde"] }
itertools = "0.9.0"
hex = "0.4.2"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
config = "0.10"
floating-duration = "0.1.2"
rand = "0.6.5"
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client", tag="v0.1.3" }
base64 = "0.12.3"
env_logger = "0.7.1"
pyo3 = "0.12.1"
tokio = { version = "0.1.18" }
daemon-engine = "0.6.0"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.2.4"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
tag = "v0.1.2"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
tag = "v0.2.7"

[dependencies.multi-party-eddsa]
git = "https://github.com/KZen-networks/multi-party-eddsa"
tag = "v0.2.1"

[dependencies.multi-party-schnorr]
git = "https://github.com/commerceblock/multi-party-schnorr"
tag = "v0.3.4"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
tag = "v0.2.7"

[dependencies.centipede]
git = "https://github.com/commerceblock/centipede"
tag = "v0.2.7"

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

[dependencies.shared]
path = "../shared"
