[package]
name = "tests"
version = "0.1.2"
authors = ["oleiba <oded@kzencorp.com>"]
edition = "2018"


[dependencies]
rocket = { version = "0.4.5", default-features = false, features=["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time-test = "0.2.1"
log = "0.4"
time = "*"
bitcoin = "0.20.0"
rand = "0.6.5"
env_logger = "0.7.1"
floating-duration = "0.1.2"
uuid = { version = "0.5", features = ["v4", "serde"] }
stoppable_thread = "0.2.1"
serial_test = "0.4.0"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
default-features = false
features=["hasher-blake3"]

#Re-export mockdb to the server package if enabled in this package
[features]
mockdb = ["server/mockdb"]
default = ["mockdb"]

[dependencies.server]
path = "../server"

[dependencies.client]
path = "../client"

[dependencies.shared]
path = "../shared"

#[development]
#tls = { certs = "../utilities/server/certs/localhost.crt" }
