[package]
name = "rust-practise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-s3 = "0.2.1"
reqwest = "0.11"
tokio = { version = "1.0.1", features = ["macros", "fs", "rt-multi-thread"] }
getrandom = "0.2"
hex = "0.4"