[package]
name = "server"
version = "0.2.0"
authors = [
    "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com"
]
edition = "2018"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.4.5", features = ["tls"] }
rocket_contrib = { version = "0.4.5", default-features = false,features = ["json","postgres_pool"] }
serde = "1.0"
rocksdb = "0.13.0"
serde_json = "1.0"
serde_derive = "1.0"
rusoto_dynamodb = "0.36.0"
rusoto_core = "0.36.0"
time-test = "0.2.1"
log = "0.4"
config = "0.9.2"
uuid = { version = "0.5", features = ["v4", "serde"] }
error-chain = "0.12.0"
failure = "0.1.5"
jsonwebtoken = "5.0.1"
rust-crypto = "0.2"
hex = "0.3.2"
floating-duration = "0.1.2"
bitcoin = { version = "0.20", features = [ "use-serde" ] }
rand = "0.6.5"
monotree = "0.1.3"
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client" }
env_logger = "0.7.1"
log4rs = "0.12.0"
postgres = { version = "0.15.2", features = ["with-uuid","with-chrono"] }
chrono = "0.4"
serial_test = "0.4.0"
stoppable_thread = "0.2.1"
mockall = "0.7.2"
cfg-if = "0.1.10"
unborrow = "0.3.1"
bitcoincore-rpc = "0.5.0"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.2.4"

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
tag = "v0.2.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.2.5"

[dependencies.multi-party-eddsa]
git = "https://github.com/KZen-networks/multi-party-eddsa"
tag = "v0.2.1"

[dependencies.multi-party-schnorr]
git = "https://github.com/KZen-networks/multi-party-schnorr"
tag = "v0.3.1"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dependencies.serde_dynamodb]
git = "https://github.com/KZen-networks/serde_dynamodb"

[dependencies.shared]
path = "../shared"

[features]
mockdb = []