[package]
name = "server"
version = "0.3.10"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
  "Tomos <tomos@commerceblock.com",
  "Tom Trevethan <tom@commerceblock.com>",
     "gbenattar <g.benattar@gmail.com>",
    "Oded Leiba <odedleiba5@gmail.com"
]
edition = "2018"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server_exec"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.4.8", features = ["tls"] }
rocket_contrib = { version = "0.4.8", default-features = false,features = ["json","postgres_pool"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
time-test = "0.2.2"
log = "0.4"
config = "0.10"
uuid = { version = "0.5", features = ["v4", "serde"] }
error-chain = "0.12.4"
failure = "0.1.8"
jsonwebtoken = "5.0.1"
rust-crypto = "0.2"
hex = "0.4.2"
floating-duration = "0.1.2"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client", tag="v0.1.3" }
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
env_logger = "0.7.1"
log4rs = "0.13.0"
postgres = { version = "0.15.2", features = ["with-uuid","with-chrono"] }
chrono = "0.4"
serial_test = "0.5.0"
stoppable_thread = "0.2.1"
mockall = "0.8.1"
cfg-if = "0.1.10"
unborrow = "0.3.1"
bitcoincore-rpc = "0.12.0"
bisetmap = "0.1.6"
jsonrpc = "0.11.0"
rocket_prometheus = "0.7.0"
once_cell = "1.2"
rocket_okapi = "0.6.0-alpha-1"
schemars = { version = "0.8.0-alpha-4", features = ["chrono", "uuid"] }
okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }
url = { version = "2.2.2", features = ["serde"] }
rand = "0.8.4"
sha3 = "0.8.2"
digest = "0.8.1"
governor = "0.3.2"
nonzero_ext = "0.3.0"
signal-hook = "0.3.10"
versions = "3.0.3"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
tag = "v0.3.10"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
tag = "v0.1.14"

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
tag = "v0.3.12"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
tag = "v0.2.8"
features =  ["ec_secp256k1"]

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

[dependencies.shared]
path = "../shared"

[features]
mockdb = []
mockbitcoinrpc = []

