
[package]
name = "shared"
version = "0.2.0"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
  "Tomos Wootton <tomoswootton@protonmail.com"
]
edition = "2018"

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
hex = "0.3.2"
libsecp256k1 = "0.3.5"
bitcoin = { version = "0.20", features = [ "use-serde" ] }
bitcoin_hashes = "0.7"
rocket = { version = "0.4.5", default-features = false, features=["tls"] }
rocket_contrib = { version = "0.4.5", default-features = false,features = ["json"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
monotree = "0.1.3"
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client" }
reqwest = "0.9.5"
itertools = "0.9.0"
base64 = "0.12.2"
merkletree = "0.20.0"
arrayvec = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]

[dependencies.kms]
git = "https://github.com/KZen-networks/kms-secp256k1"
tag = "v0.2.0"

[dependencies.multi-party-ecdsa]
git = "https://github.com/KZen-networks/multi-party-ecdsa"
tag = "v0.2.5"


#[development]
#tls = { certs = "../utilities/server/certs/localhost.crt", key = "../utilities/server/certs/localhost.key" }