
[package]
name = "shared"
version = "0.1.0"
authors = [
	"Lawrence Deacon <lawrence.deacon@gmail.com>",
  "Tomos <tomos@commerceblock.com"
]

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
hex = "0.4.2"
libsecp256k1 = "0.3.5"
bitcoin = { version = "0.25", features = [ "use-serde", "rand" ] }
bitcoin_hashes = "0.9"
rocket = { version = "0.4.5", default-features = false, features=["tls"] }
rocket_contrib = { version = "0.4.5", default-features = false,features = ["json"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
electrumx_client = { git = "https://github.com/commerceblock/rust-electrumx-client", tag="v0.1.3" }
reqwest = { version = "0.10", features = ["socks", "blocking", "json"] }
itertools = "0.9.0"
base64 = "0.12.3"
merkletree = "0.21.0"
arrayvec = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
ecies = "0.1.4"
error-chain="0.12.4"
tor-stream = "0.2.0"

[dev-dependencies]
mockito = "0.27.0"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
tag = "v0.2.7"
features =  ["ec_secp256k1"]

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
tag = "v0.1.2"
default-features = false


[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
tag = "v0.2.7"

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

#[development]
#tls = { certs = "../utilities/server/certs/localhost.crt", key = "../utilities/server/certs/localhost.key" }
